--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 :root {
     --primaryText: #fff;
     --secondaryText: #ff015e;
-    --primary: rgba(156, 39, 176, .60);
+    --primary: rgba(238, 219, 229, 0.8);
     --secondary: rgba(255, 1, 94, .60); 
-    --buttonHover: rgba(156, 39, 176, .40);
-    --smallButtonHover: rgba(0, 0, 0, .25);
+    --buttonHover: rgba(196, 180, 188, 0.8);
+    --smallButtonHover: rgba(196, 180, 188, 0.8);
 }
 
 html {
@@ -34,7 +34,7 @@ body {
     background-attachment: fixed;
     /* Resizes the background image to cover the entire container */
     background-size: cover;
-    font-family: Futura, Verdana, sans-serif;
+    font-family: "Space Mono", serif;
     line-height: 1.5;
     font-size: 18px;
     display: flex;
